# notes

./: .gitignore  Argocon.md  C++class.md  README.md  Tanzu.md  ThunderBird.md  acmnotes.txt  convertP12.md  convertToJKS.md  docker.md  hypatia.md  k3s.md  k8s_ingress.md  kubernetes_helm.md  license.txt  makeCaAndCert.txt  makeCert.sh  minicube_openshift.md  py_package.md  repoSize.md  sep2025C++.md  tanzu_linux.md  vcpkg.md  wsl.md  xrayArtifactory.md  yocto.md
python/: Dockerfile  README.md  pyproject.toml
python/src/network_tester/: bonus.py  config.py  main.py  tester.py
