[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "network_tester"
version = "0.0.1"
authors = [
  { name="Dave Borncamp", email="dave.borncamp@baesystems.us" },
]
description = "A way to mess with ethernet networking"
readme = "README.md"
requires-python = "<=3.11.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://gitlab.aero.ball.com/bcpfsw/stardust/network-tester"

[project.scripts]
my-script = "network_tester.main:main"
